Fixed some spacing issues with the password text field.

--- a/php-password-generator/password-generator.css
+++ b/php-password-generator/password-generator.css
@@ -5,47 +5,48 @@
 }
 
 #password-input {
-   text-align: center;
-   font-size: 225%;
-   margin: 0 auto;
+  text-align: center;
+  font-size: 225%;
+  margin: 0 auto;
+  width: 98%;
 }
 
 .blue-button {
-   position: relative;
-   display: block;
-   margin: 0 auto;
-   width: 25%;
-   padding-top: 10px;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 25%;
+  padding-top: 10px;
 
-   color: #FFFFFF;
-   text-align: center;
-   font-size: 150%;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 150%;
 
-   padding: 5px 5px 5px 5px;
-   background-color: #0099FF;
-   border: 1px solid #A3A3A3;
-   border-radius: 7px 7px 7px 7px;
-   box-shadow: 3px 3px 3px #888888;
+  padding: 5px 5px 5px 5px;
+  background-color: #0099FF;
+  border: 1px solid #A3A3A3;
+  border-radius: 7px 7px 7px 7px;
+  box-shadow: 3px 3px 3px #888888;
 }
 
 .blue-button:hover {
-   position: relative;
-   display: block;
-   margin: 0 auto;
-   width: 25%;
-   top: 2px;
-   left: 2px;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 25%;
+  top: 2px;
+  left: 2px;
 
-   color: #FFFFFF;
-   text-align: center;
+  color: #FFFFFF;
+  text-align: center;
 
-   padding: 5px 5px 5px 5px;
-   background-color: #008AE6;
-   border: 1px solid #969696;
-   border-radius: 7px 7px 7px 7px;
-   box-shadow: 1px 1px 3px #888888;
+  padding: 5px 5px 5px 5px;
+  background-color: #008AE6;
+  border: 1px solid #969696;
+  border-radius: 7px 7px 7px 7px;
+  box-shadow: 1px 1px 3px #888888;
 
-   cursor: pointer;
+  cursor: pointer;
 }
 
 /* Original Author: http://codepen.io/larrygeams/pen/nhgze */
